@startuml

package Auth{
    class LoginRequest{
        -nombreUsuario: String
        -contrasenia: String
    }

    class LoginResponse{
        -token: String
        +LoginResponse(token : String)
    }

    class AuthController{
        -authService: AuthService
        +login(headers: Map<String,String>,loginRequest: LoginRequest) : LoginResponse
    }

    class AuthService{
        -jwtUtils: JwtUtils
        -authenticationManager: AuthenticationManager
        +getToken(headers: Map<String,String>,loginRequest: LoginRequest): LoginResponse
    }
}

AuthController *-- AuthService


AuthController -up-> LoginRequest
AuthController -up-> LoginResponse



package SpringSecurity{
    class SecurityConfig{
        -authorizationFilter : JwtAuthorizationFilter
        -userDetailsService: UserDetailsService
        +passwordEncoder(): PasswordEncoder
        +securityFilterChain(): SecurityFilterChain
        +authenticationManager(): AuthenticationManager
    }

    class JwtUtils{
            +generarToken(user: UserDetails)
            +tokenValido(token: String)
    }

    class AuthenticationManager{
        +autenticate(user: UserDetails)
    }

    class JwtAuthorizationFilter{
        -jwtUtils: JwtUtils
        +doFilterInternal()
    }
}
AuthService *-- JwtUtils
AuthService *-- AuthenticationManager
note left of SpringSecurity: Gran parte de las clases son clases que provee la libreria de Spring Security

SecurityConfig *-- JwtAuthorizationFilter
JwtAuthorizationFilter *-up- JwtUtils

@enduml